# pypi-winnow-downloads

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-changelog.yml  pr-labels-ci.yml  publish.yml  test-publish.yml  uv-lock-refresh.yml
deploy/: README.md
deploy/caddy/: Caddyfile.example
deploy/docker/: Dockerfile  compose.yml.example
deploy/systemd/: pypi-winnow-downloads-collector.service  pypi-winnow-downloads-collector.timer
docs/: cost-model-and-pypinfo-gotchas.md
docs/superpowers/plans/: 2026-04-28-installer-mix-badge.md  2026-04-29-os-distribution-badges.md  2026-04-29-uv-lock-refresh-cron.md
docs/superpowers/specs/: 2026-04-28-installer-mix-badge-design.md  2026-04-29-os-distribution-badge-design.md  2026-04-29-uv-lock-refresh-cron-design.md
pypi_winnow_downloads/: __init__.py  badge.py  config.py
src/pypi_winnow_downloads/: __init__.py  __main__.py  badge.py  collector.py  config.py
tests/: test_badge.py  test_collector.py  test_config.py  test_init.py  test_main.py
