[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypi-winnow-downloads"
version = "0.1.0"
description = "Self-hosted PyPI download badge service that winnows CI traffic out of download counts."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Chris Means", email = "chris.a.means@gmail.com" },
]
keywords = ["pypi", "downloads", "badges", "shields.io", "bigquery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "PyYAML>=6.0",
    "pypinfo>=20.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
]

[project.scripts]
winnow-collect = "pypi_winnow_downloads.__main__:main"

[project.urls]
Homepage = "https://github.com/cmeans/pypi-winnow-downloads"
Repository = "https://github.com/cmeans/pypi-winnow-downloads"
Issues = "https://github.com/cmeans/pypi-winnow-downloads/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pypi_winnow_downloads"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
