[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypi-winnow-downloads"
version = "0.1.0"
description = "Self-hosted PyPI download badge service that winnows CI traffic out of download counts."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Chris Means", email = "chris.a.means@gmail.com" },
]
keywords = ["pypi", "downloads", "badges", "shields.io", "bigquery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "PyYAML>=6.0",
    "pypinfo>=20.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
]

[project.scripts]
winnow-collect = "pypi_winnow_downloads.__main__:main"

[project.urls]
Homepage = "https://github.com/cmeans/pypi-winnow-downloads"
Repository = "https://github.com/cmeans/pypi-winnow-downloads"
Issues = "https://github.com/cmeans/pypi-winnow-downloads/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pypi_winnow_downloads"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
# Measure only the package source, not the tests themselves. The "Missing"
# column on tests stayed at 0 historically because they don't have defensive
# branches, so excluding them keeps the report focused on production code.
source = ["src/pypi_winnow_downloads"]

[tool.coverage.report]
# Fail CI if statement coverage drops below 100%. No `# pragma: no cover`
# annotations or `exclude_lines` patterns — every line either has a real
# test or is deleted as dead code (see issue #37 / PR for the five
# previously-uncovered defensive lines that motivated this gate).
fail_under = 100
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
